syntax = "proto3";
package models;
option go_package = "./models";

import "github.com/infobloxopen/protoc-gen-gorm/options/gorm.proto";

message Block {
  option (gorm.opts) = {ormable: true};

  // Base
  uint32 number = 1 [(gorm.field).tag = {primary_key: true}];
  uint32 transaction_count = 2;
  uint32 log_count = 3;
}
